--- a/Django/PaginationSearchFilter/requirements.txt
+++ b/Django/PaginationSearchFilter/requirements.txt
@@ -8,8 +8,10 @@ decorator==5.1.1
 Django==4.1.1
 django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
+django-filter==1.1.0
 django-js-asset==2.0.0
 djangorestframework==3.14.0
+djangorestframework-filters==0.11.1
 entrypoints==0.4
 executing==0.8.3
 Faker==15.3.4
