--- a/Django/Admin_site_custom/requirements.txt
+++ b/Django/Admin_site_custom/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.6.0
 Django==4.1.5
+django-ckeditor==6.5.1
+django-js-asset==2.0.0
+Faker==16.6.0
+python-dateutil==2.8.2
 python-decouple==3.7
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
